CaseStudy: Fix for SVGs in technlogy section on IE

--- a/app/_scss/ui/_casestudy.scss
+++ b/app/_scss/ui/_casestudy.scss
@@ -82,6 +82,7 @@ a.casestudy__header-label {
   margin-bottom: 1.3rem;
   svg {
     width: 70px;
+    max-height: 50px;
     float: left;
     margin-top: 0.2rem;
 
